# T2T-C10GX

./: ASSUMPTIONS.md  LICENSE  README.md
docs/: architecture.md  mkdocs.yml  register_map.md
docs/docs/: index.md
docs/docs/api/: registers.md
hw/constraints/: pinout.qsf  t2t_exceptions.sdc  t2t_timing.sdc  timing.sdc
hw/quartus/: t2t_c10gx.qpf  t2t_c10gx.qsf
hw/rtl/book/: book_tob.sv
hw/rtl/common/: axi_async_fifo.sv  cdc_sync.sv  latency_histogram.sv  timestamp_counter.sv
hw/rtl/csr/: csr_avalon.sv  csr_block.sv
hw/rtl/filter/: ingress_filter.sv
hw/rtl/mac/: mac_wrap.sv
hw/rtl/output/: action_gpio.sv
hw/rtl/parser/: itch_decoder.sv  itch_splitter.sv  l2l3l4_parser.sv  symtab_cam.sv
hw/rtl/pcie/: dma_pcie_ep.sv  pcie_dma.sv
hw/rtl/pkg/: t2t_pkg.sv
hw/rtl/risk/: risk_gate.sv
hw/rtl/top/: t2t_top.sv  top_c10gx.sv
hw/tb/: Makefile  test_book_tob.py  test_itch_decoder.py
sw/: CMakeLists.txt
sw/host/: t2t_pcie_consumer.cpp  t2t_record.h  t2t_vfio.cpp  t2t_vfio.hpp
sw/include/: t2t_device.hpp
sw/scripts/: 99-t2t.rules  analyze_records.py  bind_vfio.sh  configure_risk.py  csr_access.py  load_symbols.py  setup_hugepages.sh  t2t-bind-vfio.sh  t2t-setup.sh
sw/scripts/itch_replay/: download_nasdaq_samples.sh  generate_synthetic_itch.py  itch_to_pcap.py  loopback_test.sh  replay_itch.sh  setup_replay_network.sh
sw/src/: t2t_ctl.cpp  t2t_device.cpp  t2t_dump.cpp  t2t_latency.cpp  t2t_symbols.cpp
sw/tools/: ref_prices.csv  symbols.csv  t2t.conf
